--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,11 +3,11 @@ services:
 
   # Jaeger
   jaeger-all-in-one:
-    image: jaegertracing/all-in-one:latest
+    image: jaegertracing/all-in-one:1.52.0
     ports:
       - "16686:16686"
-      - "14268"
-      - "14250"
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"   # OTLP HTTP receiver
   # Collector
   otel-collector:
     image: otel/opentelemetry-collector:0.91.0
