--- a/deploy/otel-collector-config.yaml
+++ b/deploy/otel-collector-config.yaml
@@ -5,9 +5,11 @@ receivers:
       http:
 
 exporters:
-  jaeger:
-    endpoint: jaeger-all-in-one:14317
-    insecure: true
+  otlphttp:
+    endpoint: http://jaeger-all-in-one:4318
+#  otlp:
+#    endpoint: jaeger-all-in-one:14317
+#    protocol: grpc
 
 processors:
   batch:
@@ -21,4 +23,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [jaeger]
+      exporters: [otlphttp]
