--- a/src/main/docker/animal/Dockerfile
+++ b/src/main/docker/animal/Dockerfile
@@ -1,9 +1,7 @@
 FROM registry.access.redhat.com/ubi8/openjdk-17:1.13-1
 USER root
 RUN mkdir /app
-# RUN microdnf install net-tools
-COPY animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar  /app
+COPY target/animals-demo-1.0-SNAPSHOT.jar  /app
 COPY opentelemetry-javaagent.jar  /app
 WORKDIR /app
-# -Dotel.metrics.exporter=logging
-CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "-Dotel.metrics.exporter=none", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dotel.service.name=animal-app", "io.opentelemetry.examples.animal.AnimalApplication"]
+CMD ["java", "-javaagent:opentelemetry-javaagent.jar", "-Dotel.metrics.exporter=none", "-Dotel.exporter.otlp.endpoint=http://otel-collector:4317/", "-Dotel.service.name=animal-app", "-jar" , "animals-demo-1.0-SNAPSHOT.jar"]
