--- a/deploy/otel-collector-config.yaml
+++ b/deploy/otel-collector-config.yaml
@@ -14,6 +14,6 @@ extensions:
 service:
   extensions: [health_check]
   pipelines:
-    traces:
+    metrics:
       receivers: [otlp]
       exporters: [debug]
