--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.exposure.include=health,info
+management.otlp.metrics.export.url=http://otel-collector:4317/
+#management.otlp.metrics.export.url=http://example.org:4318/v1/metrics
+management.otlp.metrics.export.step=10s
