--- a/src/main/docker/fish/Dockerfile
+++ b/src/main/docker/fish/Dockerfile
@@ -1,6 +1,6 @@
 FROM registry.access.redhat.com/ubi8/openjdk-17:1.13-1
 USER root
 RUN mkdir /app
-COPY animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar  /app
+COPY animals-demo-1.0-SNAPSHOT.jar  /app
 WORKDIR /app
-CMD ["java", "-cp" , "animals-demo-1.0-SNAPSHOT-jar-with-dependencies.jar", "io.opentelemetry.examples.fish.FishApplication", "--server.port=8083"]
+CMD ["java", "-jar" , "animals-demo-1.0-SNAPSHOT.jar", "io.opentelemetry.examples.fish.FishApplication", "--server.port=8083"]
