--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -35,11 +35,19 @@ services:
     image: fish_demo:latest
     ports:
       - "8083:8083"
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
   # Mustelid service
   mustelid-service:
     image: mustelid_demo:latest
     ports:
       - "8084:8084"
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
   # Feline service
   feline-service:
     image: feline_demo:latest
